# FastAPI_e-commerce_product_catalog_service

./: .gitignore  README.html  README.md  pyproject.toml  pytest.ini
fastapi_pcatalog/: database.py  main.py
fastapi_pcatalog/core/: config.py
fastapi_pcatalog/lib/: utils.py
fastapi_pcatalog/models/: brand.py  category.py  product.py  review.py  variant.py
fastapi_pcatalog/repository/: brand.py  category.py  product.py
fastapi_pcatalog/routers/: brand_router.py  category_router.py  product_router.py
tests/: conftest.py  test_category.py  test_products.py
