[tool.poetry]
# name = "fastapi-pcatalog-service"
name = "fastapi-pcatalog"
version = "0.1.0"
description = ""
authors = ["ahmedidris1 <ahmeditmo1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.111.0"}
beanie = "^1.26.0"
pydantic-settings = "^2.3.1"
httpx = "^0.27.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
